--- a/trunk/mobile_portal/mobile_portal/templates/static/about.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/static/about.xhtml
@@ -2,11 +2,13 @@
     <h2 class="section-header">About this site</h2>
 
     <div class="section-content">
-    The Oxford Mobile Portal was produced as part of the
+    Mobile Oxford was produced as part of the
     <a href="http://erewhon.oucs.ox.ac.uk/">Erewhon Project</a>, a
     <a href="http://www.jisc.ac.uk/">JISC</a>-funded project to explore the
-    provision of location-aware applications and adaption of Weblearn for use on
-    mobile devices.
+    provision of location-aware applications and adaption of Weblearn (Oxford's implementation of the Sakai VLE) for use on
+    mobile devices. <br />
+    
+    It is designed and managed by Tim Fernando and Alexander Dutton at Oxford University Computing Services.
     </div>
 </div>
 
