--- a/trunk/mobile_portal/mobile_portal/templates/core/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/index.xhtml
@@ -77,6 +77,8 @@
     <div class="section">
         <h2>Device</h2>
         <p>{{ device.brand_name }} {{ device.model_name }} ({{ device.devid }})</p>
+        <p>{{ device.devua }}</p>
+        <p>{{ ua }}</p>
     </div>
     
     <hr/>
