Correcting Oxford of Oxford to University of Oxford on home page

--- a/trunk/mobile_portal/mobile_portal/templates/core/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/index.xhtml
@@ -58,7 +58,7 @@
     </div>
     
     <div class="section-nopad">
-        <img src="{{ MEDIA_URL }}gif/brandmark.gif" alt="Oxford of Oxford" style="float:right;"/>
+        <img src="{{ MEDIA_URL }}gif/brandmark.gif" alt="University of Oxford" style="float:right;"/>
         <img src="{{ MEDIA_URL }}png/oucs-logo-small.png" alt="Oxford University Computing Services" style="float:right;"/>
     </div>
 <!--
