--- a/trunk/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/base.xhtml
@@ -6,23 +6,6 @@
 	
     <meta name="viewport" content="width=device-width; user-scalable=no; maximum-scale=1; minimum-scale=1" />
 
-{% block stylesheets %}
-    <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/base.css"/>
-{% endblock %}
-    
-{% block scripts %}
-{% if touch or desktop %}
-    <script type="text/javascript">
-        require_location = {{ require_location|yesno:"true,false" }};
-        site_media = "{{ MEDIA_URL }}";
-        base = "{% url core_index %}";
-    </script>
-    <script src="{{ MEDIA_URL }}js/jquery-1.3.2.js" type="text/javascript"></script>    
-    <script src="{{ MEDIA_URL }}js/gears_init.js" type="text/javascript"></script>
-    <script src="{{ MEDIA_URL }}js/geolocation.js" type="text/javascript"></script>
-{% endif %}
-{% endblock %}
-
 {% if device|device_has_parent:"apple_iphone_ver1" %}
     <link rel="apple-touch-icon" href="{{ MEDIA_URL}}png/apple-touch-icon.png"/>
     <link rel="apple-touch-startup-image" href="{{ MEDIA_URL}}png/apple-touch-startup-image.jpg">
@@ -32,23 +15,13 @@
 	<meta name="format-detection" content="telephone=no" />
 {% endif %}
 
-{% if touch or desktop %}
-    <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/classes/touch.css"/>
-{% else %}
-{% if smart %}
-    <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/classes/smart.css"/>
-{% else %}
-    <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/classes/unsmart.css"/>
-{% endif %}    
-{% endif %}
-    
-{% for path in device_specific_media.js %}
-    <script src="{{ MEDIA_URL }}{{ path }}" type="text/javascript"></script>    
-{% endfor %}
-{% for path in device_specific_media.css %}
-    <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}{{ path }}"/>    
-{% endfor %}
-    
+{% ifnotequal style_group "generic" %}
+    <script src="{{ MEDIA_URL }}js/jquery-1.3.2.js"  type="text/javascript"> </script>
+    <script src="{{ MEDIA_URL }}js/groups/{{ style_group }}.js"  type="text/javascript"> </script>
+{% endifnotequal %}
+    <link  rel="stylesheet" href="{{ MEDIA_URL }}css/groups/{{ style_group }}.css" type="text/css" />
+
+
 	<link rel="icon" type="image/png" href="{{ MEDIA_URL }}png/favicon.png"/>
 
     {% block extrahead %}{% endblock %}
