--- a/trunk/mobile_portal/mobile_portal/templates/podcasts/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/podcasts/index.xhtml
@@ -36,7 +36,7 @@
 
 {% endif %}
 
-<div class="list-section">
+<div class="section">
 <ul class="category_list ml">
 
 	{#CHANGE Following line to have a "TOP" ICON PLZ!#}
@@ -44,7 +44,7 @@
 </ul>
 </div>
 
-<div class="list-section" >
+<div class="section" >
 	<h2 class="section-header">By category</h2>
 <ul class="category_list ml">
 	
