--- a/trunk/mobile_portal/mobile_portal/templates/z3950/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/z3950/index.xhtml
@@ -7,7 +7,7 @@
 
 {% include "z3950/search_form.xhtml" %}
         
-<div class="list-section">
+<div class="section">
     <h2 class="section-header">Maps</h2>
 	<div class="list-note">
 		{% if preferences.location.location %}
@@ -24,7 +24,7 @@
 	</div>
 </div>
 
-<div class="list-section">
+<div class="section">
     <h2 class="section-header">Contact Library Services</h2>
     <ul class="ml">
         <li><a class="email" href="mailto:reader.services@ouls.ox.ac.uk">E-mail<br/><small>reader.services@ouls.ox.ac.uk</small></a></li>
@@ -32,7 +32,7 @@
     </ul>
 </div>
 
-<div class="list-section">
+<div class="section">
     <h2 class="section-header">Libraries' websites</h2>
     <div class="list-note"><div class="bubble">
         Please note that these links are not optimised for mobile devices.
