--- a/trunk/mobile_portal/mobile_portal/templates/results/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/results/index.xhtml
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-<div class="section-nopad">
+<div class="section">
     <h2 class="section-header">About results releases</h2>
     <div class="section-content">
         This page lists the last twenty schools to have had results released. You can check your results using Student Self-Service from a desktop browser.
@@ -17,9 +17,9 @@
 
 {% regroup items by pubDate as is %}
 {% for g in is %}
-	<div class="list-section">
+	<div class="section">
 	<h2 class="section-header">{{ g.grouper|date:"d M Y" }}</h2>
-	<ul class="ml">
+	<ul>
 {% for item in g.list %}
 <li class="non-link-item">
 {{ item.code }}: {{ item.title }}
