--- a/trunk/mobile_portal/mobile_portal/templates/webcams/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/webcams/index.xhtml
@@ -9,9 +9,9 @@
 
 
 
-<div class="list-section">
+<div class="section">
 	<h2 class="section-header">Webcams</h2>
-		<ul class="ml">
+		<ul>
 {% for webcam in webcams %}
 		<li class="{% if forloop.last and more_pages %} notbottom{% endif %}">
         	<a href="{% url webcams_webcam webcam.slug %}">{{ webcam.title }}</a>
