--- a/trunk/mobile_portal/mobile_portal/templates/contact/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/contact/index.xhtml
@@ -21,7 +21,7 @@
 
 {% block content %}
 <div class="section">
-  <div class="contact-search">	
+  <div class="search">	
   <form method="get" action=".">
     <h2 class="section-header">
       <label for="query">Search</label>
