--- a/trunk/mobile_portal/mobile_portal/templates/rss/item_detail.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/rss/item_detail.xhtml
@@ -15,12 +15,12 @@
 
 {% block content %}
 
-<div class="section-nopad">
+<div class="section">
     <h2 class="section-header">{{ item.title }}</h2>
     
-    <div class="section-content">
+    <div class="article"><div class="bubble pad-10">
         {{ description|safe }}
-    </div>
+    </div></div>
 </div>
 
 {% endblock %}
