--- a/trunk/mobile_portal/mobile_portal/templates/rss/item_list.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/rss/item_list.xhtml
@@ -12,10 +12,10 @@
 
 {% block content %}
 
-<div class="list-section">
+<div class="section">
     <h2 class="section-header">{{ feed.title }}</h2>
     
-    <ul class="ml">
+    <ul>
 {% for item in feed.rssitem_set.all %}
         <li>
             <a href="{{ item.get_absolute_url }}">
