Add application hidden field.

--- a/trunk/mobile_portal/mobile_portal/templates/googlesearch/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/googlesearch/index.xhtml
@@ -13,7 +13,7 @@
 
     <div class="section-content">
       <p style="text-align:center">
-        {{ search_form.query }}
+        {{ search_form.query }}{{ search_form.application }}
         <input type="submit" value="Go!"/>
       </p>
       <!--<p>{{ search_form.application }}</p>-->
