--- a/trunk/mobile_portal/mobile_portal/templates/googlesearch/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/googlesearch/index.xhtml
@@ -8,7 +8,7 @@
 <div class="section-nopad">
   <form method="get" action=".">
     <h2 class="section-header">
-      {{ search_form.query.label }}{% if search_form.application %} {{ search_form.get_application_display }}{% endif %}
+      {{ search_form.query.label }}{% if search_form.application %} {{ search_form.application }}{% endif %}
     </h2>
 
     <div class="section-content">
