--- a/trunk/mobile_portal/mobile_portal/templates/z3950/item_list.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/z3950/item_list.xhtml
@@ -48,7 +48,7 @@
 
 <ul class="ml">
 {% for item in page.object_list %}
-<li{% if forloop.last %} class="notbottom"{% endif %}>
+<li{% if forloop.last %} class="round-bottom"{% endif %}>
     <a href="{% url z3950_item_detail item.control_number %}">
         {{ item }}{% if item.author %}
         <br/><small><strong>Author:</strong> {{ item.author }}</small>{% endif %}
