--- a/trunk/mobile_portal/mobile_portal/templates/core/contact.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/contact.xhtml
@@ -3,10 +3,11 @@
 {% block pagetitle %}Feedback{% endblock %}
 {% block title %}m.ox | Feedback{% endblock %}
 
+
 {% block content %}
 
 {% if sent %}
-<div class="front-section">
+<div class="section">
   <p>Thank you for your feedback!</p>
 {% if referer %}
   <p>You may wish to go <a href="{{ referer }}">back from whence you came</a>.</p>
@@ -20,7 +21,7 @@
 <form method="post" action=".">
 <input type="hidden" name="referer" value="{{ referer }}"/>
 
-<div class="front-section">
+<div class="section">
 
   <dl class="feedback">
     <dt>{{ contact_form.email.label}}:</dt>
