--- a/trunk/mobile_portal/mobile_portal/templates/maps/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/maps/index.xhtml
@@ -24,12 +24,28 @@
 {# End Favourites List #}
 
 
+{# Maps Search #}
+<div class="section">
+<div class="search">
+	<form method="get" action="{% url googlesearch_index %}">
+		<h2 class="section-header">Search for Places</h2>
+  		<p>
+			{{ search_form.query }}
+			<input type="hidden" name="application" value="maps">
+			</p><p>
+    		<button type="submit">Go!</button>
+  		</p>
+	</form>
+</div>
+</div>
+{# End Maps Search #}
+
 {# Points of Interest #}
 <div class="section">
 	<h2 class="section-header">Browse Points of Interest</h2>
 	<ul>
     	<li><a href="{% url maps_nearby_list %}">Near Me</a></li>
-		<li><a href="{% url maps_category_list %}">By Category</a></li>
+		<li class="round-bottom"><a href="{% url maps_category_list %}">By Category</a></li>
 	</ul>
 </div>
 {# End Points of Interest #}
