--- a/trunk/mobile_portal/mobile_portal/templates/z3950/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/z3950/index.xhtml
@@ -1,6 +1,6 @@
 {% extends "z3950/base.xhtml" %}
 
-{% block pagetitle %}Library Search{% endblock %}
+{% block pagetitle %}Library Book Search{% endblock %}
 {% block pagetitleclass %}z3950-header with-icon{% endblock %}
 
 {% block content %}
@@ -9,38 +9,36 @@
         
 <div class="section">
     <h2 class="section-header">Maps</h2>
-	<div class="list-note">
+	<div class="note">
 		{% if preferences.location.location %}
-		<div class="bubble">
+		<div class="bubble pad-10">
 		We think you are near <strong class="location_name">{{ preferences.location.placemark.0 }}</strong>. If this is not correct, please <a class="location_update_link" href="{% url core_update_location %}?return_url={{ path }}">update your location</a>. </div>
 		{% else %}
-			<div class="bubble">We do not yet have a location for you. Please <a class="location_update_link" href="{% url core_update_location %}?return_url={{ return_url|urlencode }}">update your location</a>.</div>
+			<div class="bubble pad-10">We do not yet have a location for you. Please <a class="location_update_link" href="{% url core_update_location %}?return_url={{ return_url|urlencode }}">update your location</a>.</div>
 		{% endif %}
 		</div>
-    <ul class="ml">
+    <ul>
         <li><a href="{% url maps_category_detail "library" %}">List of libraries</a></li>
-        <li><a href="{% url maps_nearby_detail "library" %}">Libraries near me</a></li>
+        <li class="round-bottom"><a href="{% url maps_nearby_detail "library" %}">Libraries near me</a></li>
     </ul>
 	</div>
 </div>
 
 <div class="section">
-    <h2 class="section-header">Contact Library Services</h2>
-    <ul class="ml">
-        <li><a class="email" href="mailto:reader.services@ouls.ox.ac.uk">E-mail<br/><small>reader.services@ouls.ox.ac.uk</small></a></li>
+    <h2 class="section-header">Library Services Info</h2>
+    <ul>
+        <li><a class="email" href="mailto:reader.services@ouls.ox.ac.uk">E-mail<br/>
+	        <small>reader.services@ouls.ox.ac.uk</small></a></li>
         <li><a class="phone" href="tel:+441865277162">Telephone<br/><small>01865 (2)77162</small></a></li>
     </ul>
-</div>
 
-<div class="section">
-    <h2 class="section-header">Libraries' websites</h2>
-    <div class="list-note"><div class="bubble">
-        Please note that these links are not optimised for mobile devices.
+    <div class="note"><div class="bubble pad-10">
+        Please note that the following links are not optimised for mobile devices.
     </div></div>
-    <ul class="ml">
+    <ul>
         <li><a class="external" href="http://www.ouls.ox.ac.uk/">OULS <small>(Oxford University Library Services)</small></a></li>
         <li><a class="external" href="http://solo.ouls.ox.ac.uk/">SOLO <small>(Search Oxford Libraries Online)</small></a></li>
-        <li><a class="external" href="http://library.ox.ac.uk/">OLIS <small>(Oxford Library Information System)</small></a></li>
+        <li class="round-bottom"><a class="external" href="http://library.ox.ac.uk/">OLIS <small>(Oxford Library Information System)</small></a></li>
     </ul>
 </div>
 
