--- a/trunk/mobile_portal/mobile_portal/templates/z3950/search_form.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/z3950/search_form.xhtml
@@ -1,10 +1,11 @@
-<div class="section-nopad">
+<div class="section">
     <h2 class="section-header">Search</h2>
-    <div class="list-note"><div class="bubble">
+    <div class="note"><div class="bubble pad-10">
         Search OLIS by either some subset of title and author, or by ISBN.
 {% if not device.has_qwerty_keyboard %} You may use a '*' in place of an 'X' in an ISBN.{% endif %}
     </div></div>
     <form method="get" action="{% url z3950_search %}">
+	<div style="text-align:center;">
     <table class="section-table">
         <tbody>
             <tr>
@@ -27,5 +28,6 @@
             </tr>
         </tfoot>
     </table>
+	</div>
     </form>
 </div>
