--- a/trunk/mobile_portal/mobile_portal/templates/weather/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/weather/index.xhtml
@@ -4,67 +4,36 @@
 {% block pagetitle %}Weather{% endblock %}
 {% block title %}m.ox | Weather{% endblock %}
 
-{% block extrahead %}
-{{ block.super }}
-<style type="text/css">
-th {
-    padding:0.5em;
-}
-</style>
-{% endblock %}
 
 {% block content %}
 
 <div class="section">
-	<h2 class="section-header">Latest observations for Oxford</h2>
-	<div class="note"><div class="bubble">
+	<h2 class="section-header">Oxford at {{ weather.observed_date|date:"H:m" }}</h2>
+	<div class="note">
+		<div class="weather-icon">
 	    <img src="{{ MEDIA_URL }}png/weather/{{ weather.icon }}.png" alt="{{ weather.get_outlook_display|capfirst }}"/><br/>
-	    Observed on {{ weather.observed_date|date:"D j M Y \a\t H:m" }}
-	</div></div>
-	<table class="section-table">
-	    <tbody>
-	        <tr>
-	            <th>Temperature:</th>
-	            <td>{{ weather.temperature }}&deg;C</td>
-	        </tr>
-	        <tr>
-	            <th>Wind:</th>
-	            <td>{{ weather.wind_speed }} mph {{ weather.wind_direction }}</td>
-	        </tr>
-	        <tr>
-	            <th>Humidity:</th>
-	            <td>{{ weather.humidity }}%</td>
-	        </tr>
-	        <tr>
-	            <th>Pressure:</th>
-	            <td>{{ weather.pressure }} mbar {{ weather.get_pressure_state_display }}</td>
-	        </tr>
-	        <tr>
-	            <th>Visibility:</th>
-	            <td>{{ weather.get_visibility_display|capfirst }}</td>
-	        </tr>
-	    </tbody>
-    </table>
+	    </div>
+		<div class="weather-live-info">
+			<ul>
+				<li style="font-size: 36pt;">{{ weather.temperature }}&deg;C</li>
+				<li>{{ weather.wind_speed }}mph {{ weather.wind_direction }}</li>
+				<li>{{ weather.humidity }}% Relative Humidity</li>
+				<li>{{ weather.pressure }} mbar and {{ weather.get_pressure_state_display }}</li>
+				<li>{{ weather.get_visibility_display|capfirst }} Visibility</li>
+			</ul>
+		</div>
+	</div>
 </div>
 	
 <div class="section">
     <h2 class="section-header">Forecast</h2>
-
-    <table class="section-table">
-        <thead>
-            <tr>
-                <th>Day</th>
-                <th>Outlook</th>
-                <th>High</th>
-                <th>Low</th>
-            </tr>
-        </thead>
+    <table class="weather-forecast">
         <tbody>
 {% for forecast in forecasts %}
             <tr>
-                <td>{{ forecast.observed_date|date:"l" }}</td>
-                <td><img src="{{ MEDIA_URL }}png/weather/{{ forecast.icon }}.png" alt="{{ forecast.get_outlook_display|capfirst }}" style="height:2em; width:2em;"/></td>
-                <td>{{ forecast.max_temperature }}&deg;C</td>
+                <td style="font-size:12pt">{{ forecast.observed_date|date:"l" }}</td>
+                <td><img src="{{ MEDIA_URL }}png/weather/{{ forecast.icon }}.png" alt="{{ forecast.get_outlook_display|capfirst }}" style="height:2.5em; width:2.5em;"/></td>
+                <td style="font-size:12pt">{{ forecast.max_temperature }}&deg;C</td>
                 <td>{{ forecast.min_temperature }}&deg;C</td>
             </tr>
 {% endfor %}
@@ -72,12 +41,3 @@ th {
     </table>
 </div>
 {% endblock %}
-
-    temperature = models.IntegerField(null=True)
-    wind_direction = models.CharField(null=True, max_length=2)
-    wind_speed = models.IntegerField(null=True)
-    humidity = models.IntegerField(null=True)
-    pressure = models.PositiveIntegerField(null=True)
-    pressure_state = models.CharField(null=True, max_length=1, choices=PRESSURE_STATE_CHOICES)
-    visibility = models.CharField(null=True, max_length=2, choices=VISIBILITY_CHOICES)
-    
