--- a/trunk/mobile_portal/mobile_portal/templates/contact/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/contact/index.xhtml
@@ -24,7 +24,7 @@
   <div class="search">	
   <form method="get" action=".">
     <h2 class="section-header">
-      <label for="query">Search</label>
+      <label for="id_query">Search</label>
     </h2>
 	<p>
 	  <input id="id_query" name="q" value="{{ query }}"/>
