--- a/trunk/mobile_portal/mobile_portal/templates/core/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/index.xhtml
@@ -16,7 +16,7 @@
 	     <form method="get" action="{% url googlesearch_index %}">
 		 <p>
 			{{ search_form.query }}
-			<input alt="Search" type="image" src="{{ MEDIA_URL }}png/new/buttons/search-button.png" value="Search" />
+			<input alt="Search" type="image" src="{{ MEDIA_URL }}png/new/buttons/search-button.png" title="Search" />
 		 </p>
 		 </form>
 	</div>
