--- a/trunk/mobile_portal/mobile_portal/templates/z3950/search_form.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/z3950/search_form.xhtml
@@ -4,30 +4,22 @@
         Search OLIS by either some subset of title and author, or by ISBN.
 {% if not device.has_qwerty_keyboard %} You may use a '*' in place of an 'X' in an ISBN.{% endif %}
     </div></div>
+	<div id="library-search">
     <form method="get" action="{% url z3950_search %}">
-	<div style="text-align:center;">
-    <table class="section-table">
-        <tbody>
-            <tr>
-                <th>{{ search_form.title.label }}:</th>
-                <td>{{ search_form.title }}</td>
-            </tr><tr>
-                <th>{{ search_form.author.label }}:</th>
-                <td>{{ search_form.author }}</td>
-            </tr><tr>
-                <th>{{ search_form.isbn.label }}:</th>
-                <td>{{ search_form.isbn }}</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td colspan="2">
-                    <input type="submit" value="Search"/>
-                    <input type="reset" value="Reset"/>
-                </td>
-            </tr>
-        </tfoot>
-    </table>
-	</div>
+
+		<ul>
+			<li>{{ search_form.title.label }}
+			{{ search_form.title }}</li>
+		
+			<li>{{ search_form.author.label }}
+	        {{ search_form.author }}</li>
+
+			<li>{{ search_form.isbn.label }}
+	        {{ search_form.isbn }}</li>
+		</ul>
+	
+		<input type="submit" value="Search"/>
+	    <input type="reset" value="Reset"/>
     </form>
+	</div>
 </div>
